--- a/source/styles/wp-admin.scss
+++ b/source/styles/wp-admin.scss
@@ -4,18 +4,18 @@
 }
 
 @import './variables.scss';
+@import './library/styling/sizes.scss';
 @import './library/layouting/containers.scss';
-.is-root-container .editor-styles-wrapper {
-	@import './library/layouting/margins.scss';
-	@import './library/layouting/paddings.scss';
-	@import './library/styling/sizes.scss';
-	@import './library/styling/alignments.scss';
-}
-
 .is-root-container {
 	@import './ext/reset.scss';
 }
-.editor-styles-wrapper {
+.editor-styles-wrapper .wp-block-post-content {
+	@import './library/layouting/margins.scss';
+	@import './library/layouting/paddings.scss';
+	@import './library/styling/alignments.scss';
+}
+
+.wp-block-post-content {
 	line-height: var(--main-line-height);
 	font-family: var(--main-font-family);
 
@@ -35,6 +35,7 @@
 		@import './ext/scrollbar.scss';
 		@import './ext/default-typography-styling.scss';
 		@import './ext/swiper.scss';
+		@import './ext/text-stylings.scss';
 
 		@import '../components/**/!(*.wp-admin).scss';
 	}
@@ -58,8 +59,11 @@
 	background: #fff;
 }
 
-.interface-complementary-area {
+.interface-complementary-area__fill {
 	width: 400px !important;
+	.interface-complementary-area {
+		width: 100% !important;
+	}
 }
 .edit-post-visual-editor .editor-styles-wrapper {
 	padding-left: 0 !important;
