chore: Add import for containers.scss in wp-admin.scss

--- a/source/styles/wp-admin.scss
+++ b/source/styles/wp-admin.scss
@@ -13,6 +13,7 @@
 	@import './library/layouting/margins.scss';
 	@import './library/layouting/paddings.scss';
 	@import './library/styling/alignments.scss';
+	@import './library/layouting/containers.scss';
 }
 
 .wp-block-post-content {
