--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: wp_theme
+Theme Name: c_valley
 Author: HACON (CTO - Oleksandr Borysenko)
 Author URI: http://hacon.com/
 Description: theme development template
@@ -7,5 +7,5 @@ Version: 1.0.0
 Tested up to: 8
 Requires PHP: 8*
 License: GNU General Public License v2 or later
-Text Domain: wp_theme
+Text Domain: c_valley
 */
