--- a/source/components/content-block.scss
+++ b/source/components/content-block.scss
@@ -1,31 +1,33 @@
 .content-block {
-	background-color: #fff;
-	padding-left: var(--left-container-padding);
-	&._left-image {
-		padding-left: 0;
-		padding-right: var(--left-container-padding);
-		.content-block__main {
-			padding: 3.75rem 3.875rem 2.875rem
-				var(--container-simulation-padding);
-		}
-	}
-
 	display: grid;
-	align-items: center;
-	gap: 0.75rem;
-
 	grid-template-columns: 1fr 1fr;
+	gap: 1rem;
+
+	--main-image-side-padding: 3.125rem;
+	--main-side-padding: 0;
+	--main-vertical-padding: 4.125rem;
 	@include smaller-than('mobile') {
-		grid-template-columns: 1fr !important;
-		padding-bottom: 0;
+		--main-image-side-padding: 1rem;
+		--main-side-padding: 1rem;
+		--main-vertical-padding: 0;
+	}
+	&._right-image &__main {
+		padding: var(--main-vertical-padding) var(--main-image-side-padding)
+			var(--main-vertical-padding) var(--main-side-padding);
+	}
+	&._left-image &__main {
+		padding: var(--main-vertical-padding) var(--main-side-padding)
+			var(--main-vertical-padding) var(--main-image-side-padding);
 	}
 
-	// Main
-	&__main {
-		background-color: var(--semi-white);
-		padding: 3.75rem var(--container-simulation-padding) 2.875rem 3.875rem;
-		@include smaller-than('mobile') {
-			padding: 1rem !important;
+	&._no-image {
+		grid-template-columns: 1fr;
+		.content-block__main {
+			padding: 0;
+			text-align: center;
+		}
+		.content-block__image-container {
+			display: none;
 		}
 	}
 
@@ -34,17 +36,8 @@
 		position: relative;
 		overflow: hidden;
 		align-self: stretch;
+		border-radius: 1rem;
 
-		&::before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: #00000040;
-			z-index: 5;
-		}
 		@include smaller-than('mobile') {
 			height: 15rem;
 		}
