--- a/source/styles/_vars.scss
+++ b/source/styles/_vars.scss
@@ -2,6 +2,7 @@
 	--main-font-family: 'Inter Tight', sans-serif;
 	--main-letter-spacing: -0.02em;
 	--main-line-height: 1.21;
+	--main-color: var(--total-black);
 
 	--regular-border-radius: 1rem;
 
