Add PreventOnLoadCssTransitions module; implement functionality to disable CSS transitions on page load and enable them after a delay

--- a/source/asset.wp-admin.scss
+++ b/source/asset.wp-admin.scss
@@ -10,7 +10,8 @@
 @import 'styles/library/size-variables';
 
 .is-root-container,
-.block-editor-block-preview__container {
+.block-editor-block-preview__container,
+.editor-visual-editor {
 	@include add-reset-styles;
 
 	* {
