--- a/source/components/table-of-contents.scss
+++ b/source/components/table-of-contents.scss
@@ -1,60 +1,34 @@
 .table-of-contents {
-	background-color: var(--total-white);
-
-	&__inner {
-		height: fit-content;
-		padding: var(--size-1-5);
-	}
-
-	&__title {
-		font-family: Lora;
-		font-weight: 500;
-		font-size: var(--size-1-5);
-		line-height: 1;
-		letter-spacing: 0%;
-	
-		color: var(--black);
-		margin-bottom: var(--size-1-5);
-	}
-	&__list-wrapper {
-		overflow: auto;
-	}
+	background: #f8f8f8;
+	box-shadow: 0rem 3rem 7.1063rem -3rem rgba(21, 34, 54, 0.05);
+	border-radius: 1rem;
+	padding: var(--size-1-5);
+	overflow: hidden;
+	max-height: 25.3125rem;
 	&__list {
 		display: flex;
 		flex-direction: column;
-		gap: .5rem;
-		overflow: auto;
-		max-height: 12.25rem;
-
-		::-webkit-scrollbar {
-			width: 8px;
-		}
-
-		::-webkit-scrollbar-track {
-			background-color: orange;
-		}
-
-		::-webkit-scrollbar-thumb {
-			border-radius: 4px;
-			background-color: darkorange;
-		}
+		gap: 0.5rem;
+		transition: transform 0.3s ease-in-out;
 	}
 	&__item {
+		color: #636a75;
+		&._active {
+			color: #152236;
+			text-decoration: underline;
+		}
 	}
 
 	&__item-link {
-		font-weight: 400;
-		font-size: 1.0625rem;
-		line-height: 1.32;
-		letter-spacing: 0%;
+		font-weight: 500;
+		font-size: var(--size-1-125);
+		line-height: 132%;
+		letter-spacing: -0.01em;
+		text-transform: capitalize;
 		text-decoration: none;
-
-		color: var(--black);
-		opacity: .5;
-
-		transition: opacity 0.3s ease;
+		transition: color 0.2s ease-in-out;
 		&:hover {
-			opacity: 1;
+			color: #152236;
 		}
 	}
 }
